# gemini-fullstack-langgraph-quickstart

./: Dockerfile  README.md  dns_resolution.sh
CLAUDE_PROJECT/: onboarding_guide.md  python_coding_guidelines.md
backend/: Makefile  WORK_FILE.md  langgraph.json  playground.ipynb  pyproject.toml  run_tests.py  test-agent.ipynb
backend/src/query_tools/: __init__.py  aggregations.py  bigquery_connector.py  budget_forecast_data.py  database.py  events.py  financial_data_tools.py  metric_retrieval.py  monitoring.py  product_hierarchy.py  promo.py  query_formatter.py  query_functions.py  time_series.py  variances.py
backend/src/query_tools_old/: database.py  query_runner.py  query_tools.py
backend/src/research_agent/: __init__.py  app.py  configuration.py  graph.py  history_summariser.py  llm_utils.py  prompts.py  retail_analytics_agent.py  state.py  utils.py
backend/tests/integration_tests/: test_database_integration.py
backend/tests/unit_tests/database/: conftest.py  test_base.py  test_bigquery.py  test_monitored.py
frontend/src/: App.tsx
frontend/src/components/: ChatMessagesView.tsx  InputForm.tsx  PromptEditor.tsx
